--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,9 @@ import 'highlight.js/styles/atom-one-dark.css'
 ---
 
 <Layout title="Gemini Pro Chat">
-  <main >
+  <main>
     <Header />
-    <Generator client:load />
+    <Generator client:load overscroll-y-auto h-7xl/>
   </main>
   <Footer />
 </Layout>
