--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -1,30 +1,30 @@
 ---
-import Layout from '../layouts/Layout.astro'
+import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Password Protection">
   <main class="h-screen col-fcc">
-    <div class="op-30">Please input password</div>
+    <div class="op-30" id="password_prompt"></div>
     <div id="input_container" class="flex mt-4">
       <input id="password_input" type="password" class="gpt-password-input" />
       <div id="submit" class="gpt-password-submit">
-        <div class="i-carbon-arrow-right" />
+        <div class="i-carbon-arrow-right"></div>
       </div>
     </div>
   </main>
 </Layout>
 
 <script>
-const inputContainer = document.getElementById('input_container') as HTMLDivElement
+import getI18n from '../layouts/i18n.js'
+const inputContainer = document.getElementById(
+  'input_container',
+) as HTMLDivElement
 const input = document.getElementById('password_input') as HTMLInputElement
 const submitButton = document.getElementById('submit') as HTMLDivElement
-
 input.onkeydown = async(event) => {
-  if (event.key === 'Enter')
-    handleSubmit()
+  if (event.key === 'Enter') handleSubmit()
 }
 submitButton.onclick = handleSubmit
-
 async function handleSubmit() {
   const password = input.value
   const response = await fetch('/api/auth', {
@@ -47,25 +47,30 @@ async function handleSubmit() {
     }, 300)
   }
 }
+document.addEventListener('DOMContentLoaded', async() => {
+  const i18n = await getI18n()
+  const passwordPrompt = document.getElementById('password_prompt')
+  passwordPrompt.textContent = i18n.t('password_prompt')
+})
 </script>
 
 <style>
-@keyframes shake {
-  0% {
-    transform: translateX(0);
+  @keyframes shake {
+    0% {
+      transform: translateX(0);
+    }
+    25% {
+      transform: translateX(0.5rem);
+    }
+    75% {
+      transform: translateX(-0.5rem);
+    }
+    100% {
+      transform: translateX(0);
+    }
   }
-  25% {
-    transform: translateX(0.5rem);
-  }
-  75% {
-    transform: translateX(-0.5rem);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
 
-.invalid {
-  animation: shake 0.2s ease-in-out 0s 2;
-}
+  .invalid {
+    animation: shake 0.2s ease-in-out 0s 2;
+  }
 </style>
